# gwt-helper

./: .gitignore  README.md  pyproject.toml
src/gwt_worktree_manager/: app.py  cli.py  naming.py  platform_utils.py
src/gwt_worktree_manager/config/: manager.py  wizard.py
src/gwt_worktree_manager/git/: operations.py
src/gwt_worktree_manager/integrations/: __init__.py  ado.py  linear.py
src/gwt_worktree_manager/services/: discovery.py  hooks.py  terminal.py  worktree.py
src/gwt_worktree_manager/state/: __init__.py  selection_cache.py
src/gwt_worktree_manager/store/: metadata.py  ui_state.py
src/gwt_worktree_manager/widgets/: __init__.py  detail_panel.py  dialogs.py  repo_panel.py  splitter.py  status_bar.py  worktree_panel.py
tests/: conftest.py  test_bulk_delete_dialog.py  test_cli.py  test_config.py  test_discovery.py  test_e2e.py  test_git_operations.py  test_hooks.py  test_integrations.py  test_metadata.py  test_naming.py  test_selection_cache.py  test_tui.py  test_worktree_service.py  test_worktree_service_bulk.py
