[project]
name = "gwt-worktree-manager"
version = "1.0.0"
description = "Interactive Git worktree manager with TUI and CLI"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.80.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
gwt = "gwt_worktree_manager.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "performance: performance benchmark tests (deselect with '-m \"not performance\"')",
]
